--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["dbgenerated", "neondatabase", "rusosstore"]
+	"cSpell.words": ["dbgenerated", "neondatabase", "rusosstore", "sonner"]
 }
